--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <h1>Titulo principal</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque vel, culpa architecto nesciunt est tempore!</p>
     
+    <div class="row">
+        <ul>
+            <li>
+                <a href="">contacto</a>
+            </li>
+        </ul>
+    </div>
 </body>
 <script src="./main.js"></script>
 </html>
